--- a/views/barang_menus.xml
+++ b/views/barang_menus.xml
@@ -3,7 +3,7 @@
     <record id="action_list_barang" model="ir.actions.act_window">
         <field name="name">Barang</field>
         <field name="res_model">aset.barang</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree</field>
     </record>
 
     <record id="action_list_penyewaan" model="ir.actions.act_window">
