--- a/views/barang_menus.xml
+++ b/views/barang_menus.xml
@@ -3,31 +3,31 @@
     <record id="action_list_barang" model="ir.actions.act_window">
         <field name="name">Barang</field>
         <field name="res_model">aset.barang</field>
-        <field name="view_mode">tree</field>
+        <field name="view_mode">tree,form</field>
     </record>
 
     <record id="action_list_penyewaan" model="ir.actions.act_window">
         <field name="name">Penyewaan</field>
         <field name="res_model">aset.penyewaan</field>
-        <field name="view_mode">tree</field>
+        <field name="view_mode">tree,form</field>
     </record>
 
     <record id="action_list_pengembalian" model="ir.actions.act_window">
         <field name="name">Pengembalian</field>
         <field name="res_model">aset.pengembalian</field>
-        <field name="view_mode">tree</field>
+        <field name="view_mode">tree,form</field>
     </record>
 
     <record id="action_list_barang_sewaan" model="ir.actions.act_window">
         <field name="name">Barang Sewaan</field>
         <field name="res_model">aset.barang_sewaan</field>
-        <field name="view_mode">tree</field>
+        <field name="view_mode">tree,form</field>
     </record>
 
     <record id="action_list_barang_kembalian" model="ir.actions.act_window">
         <field name="name">Barang Kembalian</field>
         <field name="res_model">aset.barang_kembalian</field>
-        <field name="view_mode">tree</field>
+        <field name="view_mode">tree,form</field>
     </record>
 
     <record id="action_produksi" model="ir.actions.act_window">
