--- a/views/templates.xml
+++ b/views/templates.xml
@@ -38,9 +38,9 @@
                 </a>
                 <div class="flex md:order-2">
                     <t t-if="not logged_in">
-                        <a href="/web/login?redirect=%2Fasset" class="text-purple-500 hover:bg-purple-500 hover:text-white font-semibold border-solid border-2 border-purple-500 rounded-full text-sm px-5 py-2.5 text-center mr-3 md:mr-0">Login</a>
+                        <a href="/asset/login" class="text-purple-500 hover:bg-purple-500 hover:text-white font-semibold border-solid border-2 border-purple-500 rounded-full text-sm px-5 py-2.5 text-center mr-3 md:mr-0">Login</a>
                     </t>
-                    <t t-if="logged_in">
+                    <t t-else="">
                         <a href="/web/session/logout?redirect=%2Fasset" class="text-purple-500 hover:bg-purple-500 hover:text-white font-semibold border-solid border-2 border-purple-500 rounded-full text-sm px-5 py-2.5 text-center mr-3 md:mr-0">Logout</a>
                     </t>
                 </div>
@@ -858,6 +858,31 @@
                 </table>
             </div>
         </div>
+
+    </template>
+
+    <template id="login">
+        <t t-call="PunyaSaudara.prelude" />
+        <t t-call="PunyaSaudara.navbar" />
+
+        <div class="w-2/5 mx-auto mt-28">
+            <form method="POST" action="/web/login">
+                <div class="flex flex-col items-stretch">
+                    <div class="mb-6">
+                        <label for="email" class="block mb-2 text-sm font-semibold text-gray-900">Email</label>
+                        <input id="email" name="login" type="email" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5" required="true" />
+                    </div>
+                    <div class="mb-6">
+                        <label for="password" class="block mb-2 text-sm font-semibold text-gray-900">Password</label>
+                        <input id="password" name="password" type="password" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg  block w-full p-2.5" required="true" />
+                    </div>
+                    <input type="hidden" name="redirect" value="/asset/" />
+                    <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()" />
+                    <button type="submit" class="text-white bg-purple-500 hover:bg-purple-500 focus:ring-4 focus:outline-none  font-semibold rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center">Login</button>
+                </div>
+            </form>
+        </div>
+
 
     </template>
 </odoo>
