--- a/views/templates.xml
+++ b/views/templates.xml
@@ -5,6 +5,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
         <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro" rel="stylesheet" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <script src="https://cdn.tailwindcss.com"></script>
         <script defer="" src="https://unpkg.com/flowbite@1.5.4/dist/flowbite.js"></script>
@@ -16,14 +17,20 @@
                 margin-bottom: 32px !important;
                 font-weight: 700 !important;
             }
+            h1.no-margin {
+                margin-bottom: 0 !important;
+            }
             h2 {
                 font-size: 1.5em !important;
                 margin-top: 48px !important;
                 margin-bottom: 16px !important;
                 font-weight: 600 !important;
             }
-            *:not(.material-symbols-rounded) {
+            *:not(.font-unscoped) {
                 font-family: 'Inter' !important;
+            }
+            h1, h2 {
+                font-family: 'Source Sans Pro' !important;
             }
         </style>
     </template>
@@ -34,7 +41,7 @@
         <nav class="bg-white px-4 sm:px-4 py-2.5  fixed w-full z-20 top-0 left-0 border-b border-gray-200 ">
             <div class="container flex flex-wrap items-center justify-between mx-auto">
                 <a href="/asset" class="flex items-center">
-                    <span class="self-center text-xl font-semibold whitespace-nowrap">Media Kreatif Sentosa</span>
+                    <span class="self-center text-xl font-semibold whitespace-nowrap font-unscoped">Aset</span>
                 </a>
                 <div class="flex md:order-2">
                     <t t-if="not logged_in">
@@ -92,10 +99,11 @@
         <title>Sistem Pencatatan Stok Aset</title>
         <t t-call="PunyaSaudara.prelude" />
         <t t-call="PunyaSaudara.navbar" />
-        <div class="oe_structure">
-            <div class="container">
-                    Check
-                </div>
+        <div class="w-4/5 mx-auto mt-28 flex flex-col items-center gap-2">
+            <h1 class="font-unscoped" style="margin-bottom: 0 !important;">Sistem Pencatatan Stok Aset</h1>
+            <h2 class="font-unscoped text-center" style="margin: 0 !important;">CV Media Kreatif Sentosa</h2>
+            <p class="text-center text-gray-900 mb-4">Sistem untuk mencatat stok barang dalam inventaris perusahaan dan penyewaan beserta pengembalian barang yang dilakukan oleh klien</p>
+            <img src="/PunyaSaudara/static/src/img/logo.png" width="532px" />
         </div>
     </template>
 
@@ -106,7 +114,7 @@
 
 
         <div class="w-4/5 mx-auto mt-28">
-            <h1>Stok Aset Perusahaan</h1>
+            <h1 class="font-unscoped">Stok Aset Perusahaan</h1>
 
             <div class="flex gap-2">
                 <a href="/asset/items/new">
@@ -115,7 +123,7 @@
                     font-semibold rounded-full text-sm px-5 py-2.5 text-center mr-2 mb-4
                     flex gap-1 items-center border-2 border-solid border-purple-500
                     ">
-                        <span class="material-symbols-rounded relative">
+                        <span class="font-unscoped material-symbols-rounded relative">
                     add
                 </span>
                         <span>Tambah barang</span>
@@ -127,7 +135,7 @@
                     font-semibold rounded-full text-sm px-5 py-2.5 text-center mr-2 mb-4
                     flex gap-1 items-center border-2 border-solid border-purple-500
                     ">
-                        <span class="material-symbols-rounded relative">
+                        <span class="font-unscoped material-symbols-rounded relative">
                     description
                 </span>
                         <span>Lihat Laporan</span>
@@ -184,7 +192,7 @@
 
 
         <div class="w-4/5 mx-auto mt-28">
-            <h1>Tambah Barang Baru</h1>
+            <h1 class="font-unscoped">Tambah Barang Baru</h1>
             <form method="POST" action="/asset/items/new">
                 <div class="grid gap-6 mb-6 md:grid-cols-2">
                     <div class="mb-6">
@@ -207,7 +215,7 @@
 
 
         <div class="w-4/5 mx-auto mt-28">
-            <h1>Produksi Barang</h1>
+            <h1 class="font-unscoped">Produksi Barang</h1>
             <form method="POST" action="/asset/items/produce">
                 <div class="grid gap-6 mb-6 md:grid-cols-2">
                     <div class="mb-6">
@@ -249,7 +257,7 @@
 
 
         <div class="w-4/5 mx-auto mt-28">
-            <h1>Laporan Stok Aset</h1>
+            <h1 class="font-unscoped">Laporan Stok Aset</h1>
 
             <div class="overflow-x-auto relative shadow-md sm:rounded-lg">
                 <table class="w-full text-sm text-left text-gray-500">
@@ -309,7 +317,7 @@
 
 
         <div class="w-4/5 mx-auto mt-28">
-            <h1>Penyewaan Barang</h1>
+            <h1 class="font-unscoped">Penyewaan Barang</h1>
             <div class="flex gap-2">
                 <a href="/asset/rentals/new">
                     <button type="button" class="text-purple-500
@@ -317,7 +325,7 @@
                     font-semibold rounded-full text-sm px-5 py-2.5 text-center mr-2 mb-4
                     flex gap-1 items-center border-2 border-solid border-purple-500
                     ">
-                        <span class="material-symbols-rounded relative">
+                        <span class="font-unscoped material-symbols-rounded relative">
                     add
                 </span>
                         <span>Sewa barang</span>
@@ -329,7 +337,7 @@
                     font-semibold rounded-full text-sm px-5 py-2.5 text-center mr-2 mb-4
                     flex gap-1 items-center border-2 border-solid border-purple-500
                     ">
-                        <span class="material-symbols-rounded relative">
+                        <span class="font-unscoped material-symbols-rounded relative">
                     description
                 </span>
                         <span>Lihat laporan</span>
@@ -407,7 +415,7 @@
         <t t-call="PunyaSaudara.navbar" />
 
         <div class="w-4/5 mx-auto mt-28">
-            <h1>Tambah Penyewaan Baru</h1>
+            <h1 class="font-unscoped">Tambah Penyewaan Baru</h1>
             <form method="POST" action="/asset/rentals/new">
                 <div class="grid gap-6 mb-6 md:grid-cols-2">
                     <div class="mb-6">
@@ -441,7 +449,7 @@
                 <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()" />
                 <button type="submit" class="text-purple-500 hover:bg-purple-500 hover:text-white font-semibold border-solid border-2 border-purple-500 rounded-full text-sm px-5 py-2.5 text-center mr-3 md:mr-0">Sewa</button>
             </form>
-            <h2>Tidak menemukan penyewaan?</h2>
+            <h2 class="font-unscoped">Tidak menemukan penyewaan?</h2>
             <form method="POST" action="/asset/rentals/new-rental">
                 <div class="grid gap-6 mb-6 md:grid-cols-2">
                     <div class="mb-6">
@@ -491,7 +499,7 @@
             });
         </script>
         <div class="w-4/5 mx-auto mt-28">
-            <h1>Lihat Laporan Penyewaan Barang</h1>
+            <h1 class="font-unscoped">Lihat Laporan Penyewaan Barang</h1>
             <form id="report">
                 <div class="grid gap-6 mb-6 md:grid-cols-2">
                     <div class="mb-6">
@@ -617,7 +625,7 @@
 
 
         <div class="w-4/5 mx-auto mt-28">
-            <h1>Pengembalian Barang</h1>
+            <h1 class="font-unscoped">Pengembalian Barang</h1>
             <div class="flex gap-2">
                 <a href="/asset/returns/new">
                     <button type="button" class="text-purple-500
@@ -625,7 +633,7 @@
                     font-semibold rounded-full text-sm px-5 py-2.5 text-center mr-2 mb-4
                     flex gap-1 items-center border-2 border-solid border-purple-500
                     ">
-                        <span class="material-symbols-rounded relative">
+                        <span class="font-unscoped material-symbols-rounded relative">
                     add
                 </span>
                         <span>Kembalikan barang</span>
@@ -637,7 +645,7 @@
                     font-semibold rounded-full text-sm px-5 py-2.5 text-center mr-2 mb-4
                     flex gap-1 items-center border-2 border-solid border-purple-500
                     ">
-                        <span class="material-symbols-rounded relative">description
+                        <span class="font-unscoped material-symbols-rounded relative">description
                         </span>
                         <span>Lihat laporan</span>
                     </button>
@@ -699,7 +707,7 @@
 
 
         <div class="w-4/5 mx-auto mt-28">
-            <h1>Tambah Pengembalian Baru</h1>
+            <h1 class="font-unscoped">Tambah Pengembalian Baru</h1>
             <form method="POST" action="/asset/returns/new">
                 <div class="grid gap-6 mb-6 md:grid-cols-2">
                     <div class="mb-6">
@@ -745,7 +753,7 @@
                 <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()" />
                 <button type="submit" class="text-purple-500 hover:bg-purple-500 hover:text-white font-semibold border-solid border-2 border-purple-500 rounded-full text-sm px-5 py-2.5 text-center mr-3 md:mr-0">Kembalikan</button>
             </form>
-            <h2>Tidak menemukan pengembalian?</h2>
+            <h2 class="font-unscoped">Tidak menemukan pengembalian?</h2>
             <form method="POST" action="/asset/returns/new-return">
                 <div class="mb-6 md:grid-cols-2">
                     <label for="date" class="block mb-2 text-sm font-semibold text-gray-900">Tanggal pengembalian</label>
@@ -785,7 +793,7 @@
             });
         </script>
         <div class="w-4/5 mx-auto mt-28">
-            <h1>Lihat Laporan Penyewaan Barang</h1>
+            <h1 class="font-unscoped">Lihat Laporan Penyewaan Barang</h1>
             <form id="report">
                 <div class="grid gap-6 mb-6 md:grid-cols-2">
                     <div class="mb-6">
